// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Offers /> renders a dynamic discount offer 1`] = `
<div>
  <div
    class="summary-row"
  >
    <p
      class="d-flex m-0"
    >
      <span
        class="flex-grow-1"
      >
        Discounts applied
      </span>
      <span>
        -$10.00
      </span>
    </p>
    <p
      class="m-0 text-muted"
    >
      50%
       discount for your first upgrade applied.
    </p>
  </div>
</div>
`;

exports[`<Offers /> renders a percentage offer 1`] = `
<div>
  <div
    class="summary-row"
  >
    <p
      class="d-flex m-0"
    >
      <span
        class="flex-grow-1"
      >
        Discounts applied
      </span>
      <span>
        -$10.00
      </span>
    </p>
    <p
      class="m-0 text-muted"
    >
      50%
       discount provided by Pied Piper.
    </p>
  </div>
</div>
`;

exports[`<Offers /> renders an absolute value offer 1`] = `
<div>
  <div
    class="summary-row"
  >
    <p
      class="d-flex m-0"
    >
      <span
        class="flex-grow-1"
      >
        Discounts applied
      </span>
      <span>
        -$10.00
      </span>
    </p>
    <p
      class="m-0 text-muted"
    >
      $10.00
       discount provided by Pied Piper.
    </p>
  </div>
</div>
`;
